--- a/app/assets/stylesheets/modules/_logo.scss
+++ b/app/assets/stylesheets/modules/_logo.scss
@@ -6,46 +6,22 @@
 
 .Logo {
   @extend %hide_text;
-  display: block;
+  min-height: 100px;
   float: left;
-  margin-top: 46px;
+  margin: 0;
+  display: block;
   width: 215px;
   height: 88px;
+  background: no-repeat left center;
 
   body.refugees & {
-    background: image-url('logo--refugees.svg');
-    background-size: 215px 88px;
+    background-image: image-url('logo--refugees.svg');
+    background-size: auto 75px;
   }
 
   body.family & {
-    background: image-url('logo--family.svg');
-    background-size: 215px 88px;
+    background-image: image-url('logo--family.svg');
+    background-size: auto 75px;
   }
 
-  html[dir="rtl"] & {
-    float: right;
-  }
-
-  a {
-    display: block;
-    width: inherit;
-    height: inherit;
-  }
-}
-
-.Logo--start {
-  margin-top: 36px;
-  width: 250px;
-  height: 95px;
-  background-size: 250px 95px;
-
-  body.refugees & {
-    background: image-url('logo--refugees.svg');
-    background-size: 250px 95px;
-  }
-
-  body.family & {
-    background: image-url('logo--family.svg');
-    background-size: 250px 95px;
-  }
 }
