WIP: further styling

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -55,6 +55,7 @@
 @import "modules/offer-taxonomy";
 @import "modules/hero";
 @import "modules/callout";
+@import "modules/explaination-area";
 
 @import "modules/sections/section-content";
 @import "modules/sections/section-start";
