--- a/app/views/layouts/partials/_header.html.slim
+++ b/app/views/layouts/partials/_header.html.slim
@@ -1,5 +1,5 @@
 header.header-main
-  .wrapper-inner
+  .header-main__wrapper.wrapper-inner
     button.header-main__nav-main-trigger#header-main__nav-main-trigger[aria-label="Navigation"] ☰
     h1.Logo = link_to 'clarat.org', home_path(current_section)
     nav.nav-lang
