--- a/app/views/offers/shared/_search_form.html.slim
+++ b/app/views/offers/shared/_search_form.html.slim
@@ -32,11 +32,10 @@ div.main-search
         = f.input :category, as: :hidden
         = f.input :exact_location, as: :hidden
         = f.input :contact_type, as: :hidden
-        = f.input :encounters, as: :hidden
-        = f.input :age, as: :hidden
         = f.input :target_audience, as: :hidden
         = f.input :exclusive_gender, as: :hidden
         = f.input :language, as: :hidden
+        = f.input :residency_status, as: :hidden
         = f.input :sort_order, as: :hidden
         = f.input :section_identifier, as: :hidden
       button.main-search__submit[type="submit"] = t '.button'
