--- a/app/views/offers/index.html.slim
+++ b/app/views/offers/index.html.slim
@@ -7,13 +7,7 @@ noscript.NoScript
   i.fa.fa-exclamation-triangle
   p== t('.noscript_warning')
 
-/ Inform JS…
-/ …about the category structure
-- cache ['categories_nest', @current_section, @category_tree.length, I18n.locale] do
-  #category-tree(
-    data={structure: render('offers/index/categories_nest.json', section: @current_section, set: @category_tree, depth: 0)}
-  )
-/ …about the filter structure
+/ Inform JS about the filter structure
 #filters(
   data={structure: render('offers/index/filters.json')}
 )
