WIP: basic styling of mission, footer, nav, section_choice

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -55,6 +55,7 @@
 @import "modules/hero";
 @import "modules/callout";
 @import "modules/explaination-area";
+@import "modules/mission";
 
 @import "modules/sections/section-content";
 @import "modules/sections/section-start";
@@ -66,6 +67,7 @@
 @import "form/main-search";
 @import "form/newsletter-subscribe";
 @import "form/contact-form";
+@import "form/filter-form";
 @import "form/filter-form";
 
 @import "navigation/nav-sections";
