--- a/app/assets/stylesheets/modules/_logo.scss
+++ b/app/assets/stylesheets/modules/_logo.scss
@@ -30,4 +30,10 @@
     background-size: auto 75px;
   }
 
+  body.template--pages-section_choice[data-section="refugees"] &,
+  body.template--pages-section_choice[data-section="family"] & {
+    background-image: image-url('logo--worldless.svg');
+    background-size: auto 75px;
+  }
+
 }
