--- a/app/assets/stylesheets/base/_header.scss
+++ b/app/assets/stylesheets/base/_header.scss
@@ -26,4 +26,10 @@ button.header-main__nav-main-trigger {
     color: $brand_core_refugees;
   }
 
+  body.template--pages-section_choice[data-section="refugees"] &, // Specifity
+  body.template--pages-section_choice[data-section="family"] & {
+    color: $brand_brown;
+
+  }
+
 }
