--- a/app/assets/stylesheets/modules/_callout.scss
+++ b/app/assets/stylesheets/modules/_callout.scss
@@ -2,6 +2,7 @@
   max-width: 1200px;
   margin-left: auto;
   margin-right: auto;
+  overflow: auto;
 
   @supports (display: grid) {
     display: grid;
@@ -10,7 +11,14 @@
 }
 
 .Callout__section {
-  padding: 46px 37px 0;
+  padding: 46px 3.08% 0;
+  float: left;
+  width: 33%;
+
+  @supports (display: grid) {
+    float: none;
+    width: auto;
+  }
 }
 
 .Callout__icon {
@@ -22,6 +30,11 @@
 
   [data-section="refugees"] & {
     fill: $brand_core_refugees;
+  }
+
+   body.template--pages-section_choice[data-section="refugees"] &,
+   body.template--pages-section_choice[data-section="family"] & {
+    fill: $brand_brown;
   }
 }
 
@@ -36,5 +49,10 @@
 
   [data-section="refugees"] & {
     color: $brand_core_refugees;
+  }
+
+  body.template--pages-section_choice[data-section="refugees"] &,
+  body.template--pages-section_choice[data-section="family"] & {
+    color: $brand_brown;
   }
 }
