--- a/app/assets/stylesheets/modules/_mission.scss
+++ b/app/assets/stylesheets/modules/_mission.scss
@@ -1,3 +1,53 @@
 .Mission {
-  background-color: $brand_yellow;
+}
+
+.Mission__stage {
+  width: 100%;
+  height: 380px;
+  background-color: #bada55;
+  display: flex;
+  justify-content: flex-end;
+}
+
+.Mission__statement {
+  position: relative;
+  height: 380px;
+  background: #F4B528;
+  width: 48%;
+  margin-left: 100px;
+  padding: 40px;
+  z-index: 2;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: right;
+
+  &:after {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: -75px;
+    width: 50px;
+    height: 0;
+    line-height: 0;
+    border-top: 190px solid #F4B528;
+    border-right: 0 solid transparent;
+    border-bottom: 190px solid #F4B528;
+    border-left: 75px solid transparent;
+  }
+}
+
+.Mission__statement,
+.Mission__headline {
+  @extend %roboto_slabbold;
+  font-size: 50px;
+}
+
+.Mission__headline {
+  font-size: 50px;
+  margin-bottom: .5em;
+}
+
+.Mission__statement {
+  font-size: 35px;
 }
