--- a/app/assets/stylesheets/mediaqueries/_l.scss
+++ b/app/assets/stylesheets/mediaqueries/_l.scss
@@ -197,6 +197,45 @@
     font-size: 30px;
   }
 
+  .Hero {
+    [data-section="family"] & {
+      background-image: image_url('hero_family--1--medium.jpg')
+    }
+
+    [data-section="refugees"] & {
+      background-image: image_url('hero_refugees--1--medium.jpg')
+    }
+  }
+
+  .Mission__statement,
+  .Mission__stage {
+    height: 246px;
+  }
+
+  .Mission__stage {
+    background-image: image_url('mission--1--large.jpg')
+  }
+
+  .Mission__statement {
+    padding: 25px 25px 25px 0;
+
+    &:after {
+      border-top: 123px solid #F4B528;
+      border-bottom: 123px solid #F4B528;
+      border-left: 45px solid transparent;
+      left: -45px;
+      width: 45px;
+    }
+  }
+
+  .Mission__headline {
+    font-size: 35px;
+  }
+
+  .Mission__text {
+    font-size: 23px;
+  }
+
   // Content ######################################
 
   .section-wrapper-major,
