--- a/app/assets/stylesheets/mediaqueries/_s.scss
+++ b/app/assets/stylesheets/mediaqueries/_s.scss
@@ -432,6 +432,21 @@
     }
   }
 
+  .Mission__stage {
+    background-size: contain;
+    background-position: -12% center;
+  }
+
+  .Hero {
+    [data-section="family"] & {
+      background-image: image_url('hero_family--1--small.jpg')
+    }
+
+    [data-section="refugees"] & {
+      background-image: image_url('hero_refugees--1--small.jpg')
+    }
+  }
+
   // Twitter Typeahead ###########################
 
 
