--- a/app/assets/stylesheets/mediaqueries/_config.scss
+++ b/app/assets/stylesheets/mediaqueries/_config.scss
@@ -17,11 +17,15 @@
   @if $point == S {
     @media (max-width: 500px) { @content; }
   }
+
+  @if $point == XS {
+    @media (max-width: 410px) { @content; }
+  }
 }
 
 @mixin mqindicator($mqname) {
 
-  $debug: false;
+  $debug: true;
 
   @if $debug == true {
     body:before {
@@ -45,3 +49,4 @@
 @import "l";
 @import "m";
 @import "s";
+@import "xs";
