--- a/app/assets/stylesheets/mediaqueries/_m.scss
+++ b/app/assets/stylesheets/mediaqueries/_m.scss
@@ -710,7 +710,48 @@
     font-size: 13px;
   }
 
-  // Content ######################################
+  .Hero {
+    [data-section="family"] & {
+      background-image: image_url('hero_family--1--medium.jpg')
+    }
+
+    [data-section="refugees"] & {
+      background-image: image_url('hero_refugees--1--medium.jpg')
+    }
+  }
+
+  .Mission__statement,
+  .Mission__stage {
+    height: 176px;
+  }
+
+  .Mission__stage {
+    background-image: image_url('mission--1--medium.jpg')
+  }
+
+  .Mission__statement {
+    padding: 15px 15px 15px 0;
+
+    &:after {
+      border-top: 88px solid #F4B528;
+      border-bottom: 88px solid #F4B528;
+      border-left: 30px solid transparent;
+      left: -30px;
+      width: 30px;
+    }
+  }
+
+  .Mission__headline {
+    font-size: 22px;
+  }
+
+  .Mission__text {
+    font-size: 14px;
+  }
+
+
+
+    // Content ######################################
 
   .page-wrap:after {
     height: 136px;
