--- a/app/assets/stylesheets/modules/_hero.scss
+++ b/app/assets/stylesheets/modules/_hero.scss
@@ -1,9 +1,21 @@
 .Hero {
-  background: image_url('hero--1.jpg') no-repeat top center;
+  background: image_url('hero--1.jpg') no-repeat center center;
   background-size: cover;
   height: 525px;
+  max-width: 1600px;
+  margin: auto;
   display: flex;
   flex-direction: column;
+
+  [data-section="family"] & {
+    background: image_url('hero_family--1.jpg') no-repeat center center;
+    background-size: cover;
+  }
+
+  [data-section="refugees"] & {
+    background: image_url('hero_refugees--1.jpg') no-repeat center center;
+    background-size: cover;
+  }
 }
 
 .Hero__shopping-window {
@@ -19,13 +31,19 @@
 }
 
 .Hero__link-to-explaination {
-  @extend %roboto_bold;
+  @extend %roboto_slabbold;
   color: inherit;
   text-decoration: none;
   border-top: 1px solid;
-  margin-top: 10px;
+  margin-top: 18px;
   display: block;
   font-size: 24px;
+  background: image-url('ico_play.svg') no-repeat left bottom;
+  background-size: 60px 60px;
+  min-height: 80px;
+  padding-left: 75px;
+  line-height: 60px;
+  padding-top: 20px;
 }
 
 .Hero__logline {
