--- a/app/assets/stylesheets/modules/_mission.scss
+++ b/app/assets/stylesheets/modules/_mission.scss
@@ -4,7 +4,8 @@
 .Mission__stage {
   width: 100%;
   height: 380px;
-  background-color: #bada55;
+  background: image-url('mission--1.jpg') no-repeat left center;
+  background-size: 60% auto;
   display: flex;
   justify-content: flex-end;
 }
