--- a/app/assets/stylesheets/navigation/_nav-lang.scss
+++ b/app/assets/stylesheets/navigation/_nav-lang.scss
@@ -62,7 +62,7 @@ button.nav-lang__button {
   width: 25px;
   height: 25px;
   float: left;
-  margin: 9px 0 10px;
+  margin: 19px 5px 10px 0;
   cursor: default;
 
   body.family &,
